# harnessRx

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: datasets.py  eval.py  features.py  guardrails.py
backend/app/features/: __init__.py  classify.py  extract.py  rag.py  summarize.py
backend/app/guardrails/: __init__.py  pii.py  prompt_injection.py  schema.py  toxicity.py
backend/app/llm/: anthropic_client.py
backend/app/runner/: baseline.py  runner.py
backend/app/scoring/: aggregate.py  heuristic.py  judge.py
backend/app/storage/: results.py
backend/tests/: test_smoke.py
baselines/: main.json
datasets/: classify.yaml  extract.yaml  rag.yaml  summarize.yaml
datasets/guardrails/: injection.yaml  pii.yaml  toxicity.yaml
datasets/rag_corpus/: api-rate-limits.txt  data-retention.txt  refund-policy.txt  sso-setup.txt
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/pages/: Dashboard.jsx  Datasets.jsx  Guardrails.jsx  Playground.jsx
